--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.16.0",
     "slugify": "^1.6.5"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
