--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy":"https://ssdtest.onrender.com/",
+  "proxy":"https://ssdbackend.onrender.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
